# SyntheticData

./: CMakeLists.txt
BM6toDB/: BM6toDB.cpp  CMakeLists.txt
BM6toXPlaneVideo/: CMakeLists.txt
NASA_Data/: explore_data.ipynb  make_nasa_master.py  make_nasa_pcm_data.py
NASA_Data/parsed/master/: 652200111111735_COMPUTER_GENERATED_DATA_F1.txt
NASA_Data/parsed/master/652200111111735_ARINC429_F0.parquet/: _metadata.yaml
NASA_Data/parsed/master/652200111111735_MILSTD1553_F1.parquet/: _metadata.yaml
NASA_Data/parsed/original/: 652200111111735_COMPUTER_GENERATED_DATA_F1.txt  652200111111735_TIME_DATA_F1.parquet
NASA_Data/parsed/original/652200111111735_ARINC429_F0.parquet/: _metadata.yaml
NASA_Data/parsed/original/652200111111735_MILSTD1553_F1.parquet/: 000.parquet  _metadata.yaml
NASA_Data/parsed/pcm/: 652200111111735_pcm_COMPUTER_GENERATED_DATA_F1.txt  652200111111735_pcm_TIME_DATA_F1.parquet
NASA_Data/parsed/pcm/652200111111735_pcm_ARINC429_F0.parquet/: _metadata.yaml
NASA_Data/parsed/pcm/652200111111735_pcm_MILSTD1553_F1.parquet/: _metadata.yaml
NASA_Data/translated/652200111111735_ARINC429_F0_translated/: _metadata.yaml
NASA_Data/translated/652200111111735_ARINC429_F0_translated/ENGINE_OIL_PRESSURE_41.parquet/: 00.parquet
NASA_Data/translated/652200111111735_ARINC429_F0_translated/Exhaust_Gas_Temperature_40.parquet/: 00.parquet
NASA_Data/translated/652200111111735_ARINC429_F0_translated/Fuel_Flow_41.parquet/: 00.parquet
NASA_Data/translated/652200111111735_MILSTD1553_F1_translated/NAV.parquet/: 00.parquet
NASA_Data/translated/master/652200111111735_ARINC429_F0_translated/: _metadata.yaml
NASA_Data/translated/master/652200111111735_ARINC429_F0_translated/ENGINE_OIL_PRESSURE_40.parquet/: 00.parquet
NASA_Data/translated/master/652200111111735_ARINC429_F0_translated/ENGINE_OIL_PRESSURE_41.parquet/: 00.parquet
NASA_Data/translated/master/652200111111735_MILSTD1553_F1_translated/: _metadata.yaml
NASA_Data/translated/original/652200111111735_MILSTD1553_F1_translated/: _metadata.yaml
NASA_Data/translated/pcm/652200111111735_pcm_ARINC429_F0_translated/: _metadata.yaml
NASA_Data/translated/pcm/652200111111735_pcm_MILSTD1553_F1_translated/: _metadata.yaml
SynthCh10Gen/: CMakeLists.txt  Ch10Format_1553.cpp  Ch10Format_1553_Nav.cpp  Ch10Format_A429_AR100.cpp  Ch10Format_PCM.cpp  Ch10Writer_1553.cpp  Ch10Writer_A429.cpp  Ch10Writer_Index.cpp  Ch10Writer_Index.h  Ch10Writer_PCM.cpp  Ch10Writer_Time.cpp  Ch10Writer_Video.cpp  Source_BMNavDB.cpp  Source_BMNavTxt.cpp  Source_CsvTxt.cpp  Source_NasaNavTxt.cpp  SynthCh10Gen.cpp
(+28 files in other folders)
